# LR-Exporter

./: README.md  ToDo.txt  __init__.py  addon_ui.py  blender_manifest.toml  lr_exporter.code-workspace  pyproject.toml  shared.py
operators/: operators.py  utils.py  wrappers.py
scripts/: Mask Export v2.py  Mask Export.py  Test Print.py  Test Rename.py
scripts_preprocess/: Test Prepro Print.py  generate_uv_mask.py  notes.md
